<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCEDCE"
    android:backgroundTint="#FCEDCE"
    android:id="@+id/main"
    tools:context=".home">

    <!-- Scrollable content -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Main content area -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FCEDCE"
            android:orientation="vertical">

            <!-- Location and Search bar -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_anchor="@id/textView3"
                app:layout_anchorGravity="top|center">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:src="@drawable/profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="Hi Niumi!"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="266dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:hint="@string/search_hint"
                    android:padding="10dp"
                    android:textColorHint="#3E3E3E"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#FCEDCE"
                    android:src="@drawable/search"
                    app:tint="#282727" />
            </LinearLayout>

            <TextView
                android:id="@+id/premium"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:text="Explore Premium"
                android:textColor="#B6A401"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="993dp"
                android:layout_height="237dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/banner_image" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="195dp"
                android:layout_height="23dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/discount_offer"
                android:textColor="#04365D"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_anchor="@id/scrollView2"
                app:layout_anchorGravity="center" />

            <!-- Categories -->
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/closing_in"
                android:textColor="#04365D"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/upgrade"
                android:layout_width="375dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#F88989"
                android:fontFamily="@font/aboreto"
                android:text="@string/upgrade_now"
                android:textColor="#4A0556"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="349dp"
                android:layout_height="27dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="What would you like to use Stylo for?"
                android:textAlignment="center"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="140dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="Select your main reason and we'll help you achive your wodrobe goals"
                android:textAlignment="center"
                android:textColor="#052E04"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="175dp" />


            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/category"
                android:textColor="#090909"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Category Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/tshirt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#CEBB13"
                    android:padding="10dp"
                    android:text="@string/t_shirt"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/pants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#CEBB13"
                    android:padding="10dp"
                    android:text="@string/pant"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/dress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#CEBB13"
                    android:padding="10dp"
                    android:text="@string/dress"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#CEBB13"
                    android:padding="10dp"
                    android:text="@string/jacket"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Flash Sale Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/you_might_like"
                android:textColor="#101010"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Product Images -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="158dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:src="@drawable/product_image_1" />

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="158dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:src="@drawable/product_image_2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="341dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="210dp"
                        android:layout_height="28dp"
                        android:layout_weight="1"
                        android:text="Beige tshirt"
                        android:textAlignment="center"
                        android:textColor="#F66899"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="223dp"
                        android:layout_height="28dp"
                        android:layout_weight="1"
                        android:text="Denim"
                        android:textAlignment="center"
                        android:textColor="#F66899"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="158dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:src="@drawable/product_image_3" />

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="172dp"
                        android:layout_weight="1"
                        android:src="@drawable/product_image_4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="100dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Hand bag"
                        android:textAlignment="center"
                        android:textColor="#F66899" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Shoes"
                        android:textAlignment="center"
                        android:textColor="#F66899" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- FrameLayout to host fragments -->
    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDC0D4"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
